chinh swagger va method get user
