# routers/userRouter.js
@@ -3,6 +3,6 @@ import express from 'express'
 
 const router = express.Router()
 
-router.get('/', userController.getUserInfoByToken)
+router.get('/:id', userController.getUserByID)
 
 export default router
